# streamsync

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  demo.sh  mkdocs.yml  test_node.toml
collected_data/: dataset_analysis.json  dataset_stats.json  real_data_validation_results.json  solana_dataset.json  validation_demo_results.json  validation_results.json
configs/: demo-config.toml  test-config.toml
core-libraries/consensus-core/: Cargo.toml
core-libraries/consensus-core/benches/: consensus_benchmark.rs
core-libraries/consensus-core/src/: config.rs  engine.rs  error.rs  lib.rs  messages.rs  state.rs  transport.rs  types.rs
core-libraries/consensus-core/tests/: integration_tests.rs
core-libraries/distributed-duckdb/: Cargo.toml
core-libraries/distributed-duckdb/src/: coordinator.rs  lib.rs  query.rs  shard.rs
core-libraries/distributed-duckdb/src/consensus/: message_log.rs  mod.rs  pbft.rs  state.rs  view_change.rs
core-libraries/distributed-duckdb/src/network/: discovery.rs  gossip.rs  mod.rs  peer.rs  protocol.rs  topology.rs
core-libraries/distributed-duckdb/src/sharding/: load_balancer.rs  migration.rs  mod.rs  placement.rs  replication.rs  strategy.rs
core-libraries/idl-sync/: Cargo.toml
core-libraries/idl-sync/src/: analyzer.rs  cache.rs  consensus.rs  error.rs  generator.rs  lib.rs  monitor.rs  types.rs
core-libraries/networking-core/: Cargo.toml
core-libraries/networking-core/src/: codec.rs  config.rs  connection.rs  discovery.rs  error.rs  gossip.rs  lib.rs  metrics.rs  security.rs  transport.rs
core-libraries/program-parser/: Cargo.toml
core-libraries/program-parser/src/: cache.rs  detector.rs  error.rs  lib.rs  types.rs
core-libraries/program-parser/src/parsers/: anchor.rs  jupiter.rs  marinade.rs  metaplex.rs  mod.rs  orca.rs  raydium.rs  serum.rs  solend.rs  spl_token.rs
core-libraries/sharding-core/: Cargo.toml
core-libraries/sharding-core/benches/: sharding_benchmarks.rs
core-libraries/sharding-core/src/: config.rs  error.rs  hash_ring.rs  lib.rs  manager.rs  metrics.rs  migration.rs  node.rs  replication.rs
core-libraries/solana-indexer/: Cargo.toml
core-libraries/solana-indexer/src/: client.rs  config.rs  indexer.rs  lib.rs  tests.rs  types.rs
core-libraries/storage-core/: Cargo.toml
core-libraries/storage-core/src/: backend.rs  cache.rs  compression.rs  config.rs  lib.rs  manager.rs  query.rs  schema.rs
core-libraries/zk-reconstruction/: Cargo.toml
core-libraries/zk-reconstruction/src/: adaptive_verification.rs  cache.rs  error.rs  lib.rs  reconstructor.rs  types.rs  verification.rs
core-libraries/zk-reconstruction/src/strategies/: constraint_solver.rs  merkle_reconstructor.rs  mod.rs  pattern_matcher.rs
docs/: TOKEN_CUSTODY.md  architecture-overview.md  consensus-mechanisms.md  core-libraries.md  distributed-caching.md  getting-started.md  incentive-model.md  network-economics.md  performance-guarantees.md  project-roadmap.md  specs.md  technical-challenges.md  token-economics.md  why-economic-decentralization.md
docs/whitepaper/: references.bib  streamsync-whitepaper.tex
documentation/: index.md  mkdocs.yml
documentation/api/: node-api.md
documentation/architecture/: core-libraries.md
documentation/concepts/: overview.md  racing-competition.md
documentation/docs/: index.md
documentation/docs/api/: economics-api.md  query-api.md
documentation/docs/architecture/: distributed-queries.md  gossip-protocol.md  overview.md
documentation/docs/concepts/: economic-decentralization.md  node-specializations.md
documentation/docs/getting-started/: configuration.md  quickstart.md
documentation/docs/operators/: monitoring.md  node-types.md  performance-tuning.md  running-a-node.md
documentation/docs/resources/: glossary.md  roadmap.md  whitepaper.md
documentation/docs/tokenomics/: pricing.md  rewards.md  strm-token.md
documentation/getting-started/: installation.md
documentation/resources/: faq.md
documentation/stylesheets/: extra.css
documentation/tokenomics/: staking.md
examples/: Cargo.toml  basic_demo.rs  basic_reconstruction.rs  controlled_test.rs  dataset_validation.rs  dataset_validation_demo.rs  economics_demo.rs  end_to_end_pipeline.rs  idl_analysis.rs  live_data_demo.rs  real_data_validator.rs  real_solana_analysis.rs  simple_demo.rs  simple_live_demo.rs  solana_data_demo.rs
programs/strm-token/: Cargo.toml
programs/strm-token/src/: constants.rs  errors.rs  lib.rs
programs/strm-token/src/instructions/: claim.rs  initialize.rs  mod.rs  settle.rs  stake.rs  unstake.rs
programs/strm-token/src/state/: config.rs  mod.rs  settlement.rs  stake_account.rs
src/: Cargo.toml  config.rs  consensus.rs  economics.rs  gateway.rs  lib.rs  light_client.rs  main.rs  node.rs  node_specializations.rs  query_router.rs  rate_limiter.rs  revenue_sharing.rs  settlement.rs  wallet_manager.rs
tests/: integration_tests.rs  solana_data_tests.rs  state_compression_tests.rs
tests/integration/: cross_library_integration.rs  distributed_duckdb_integration.rs  idl_sync_integration.rs  mod.rs  performance_integration.rs  zk_reconstruction_integration.rs
tools/: Cargo.toml  README.md  aggressive_data_collector.rs  data_collector.rs  dataset_analyzer.rs  decentralized_demo.rs  live_pipeline_test.rs  performance_benchmark.rs  program_parser_demo.rs  quick_pipeline_test.rs  real_data_collector.rs  real_data_collector_v2.rs  simple_collector.rs  simple_threshold_test.rs  threshold_validation_test.rs
whitepaper/: Makefile
