[workspace]
members = [
    "core-libraries/zk-reconstruction",
    "core-libraries/idl-sync",
    # "core-libraries/distributed-duckdb", # Temporarily disabled due to compilation errors
    "core-libraries/program-parser",
    "core-libraries/consensus-core",
    "core-libraries/networking-core",
    "core-libraries/sharding-core",
    "core-libraries/solana-indexer",
    "core-libraries/storage-core",
    "src",
    "examples",
    "tools"
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
nng = "1.0"
tonic = "0.10"
prost = "0.12"
tonic-build = "0.10"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"
reqwest = { version = "0.11", features = ["json"] }

# Database
duckdb = { version = "0.9", features = ["bundled"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Solana
solana-client = "1.17"
solana-sdk = "1.17"
solana-account-decoder = "1.17"
solana-transaction-status = "1.17"
anchor-client = "0.29"
anchor-lang = "0.29"

# Cryptography
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.0"
flate2 = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# Performance
dashmap = "5.5"
crossbeam = "0.8"
rayon = "1.8"
ahash = "0.8"
rand = "0.8"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

# CLI
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.test]
opt-level = 1
debug = true