[package]
name = "consensus-core"
version = "0.1.0"
edition = "2021"
description = "Byzantine fault tolerant consensus for distributed systems"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
async-trait = { workspace = true }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
criterion = { workspace = true }
proptest = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "consensus_benchmark"
harness = false