[package]
name = "distributed-duckdb"
version = "0.1.0"
edition = "2021"
description = "Distributed DuckDB coordination for analytical queries"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"
bincode = "1.3"
rand = "0.8"
nng = "1.0"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tokio-test = "0.4"