[package]
name = "program-parser"
version = "0.1.0"
edition = "2021"
description = "Automatic program-specific parsing for Solana programs"

[dependencies]
# Solana dependencies
solana-sdk = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Performance
dashmap = { workspace = true }
ahash = { workspace = true }

# SPL Token specific
spl-token = "7.0"
spl-associated-token-account = "6.0"

# Metaplex specific
mpl-token-metadata = "5.0"
mpl-bubblegum = "2.0"

# Math for numerical parsing
num-traits = "0.2"
rust_decimal = "1.32"